[package]
name = "authy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
axum-extra = { version = "0.10.3", features = ["typed-header", "file-stream", "query"] }
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
data-encoding = "2.10.0"
figment = { version = "0.10.19", features = ["env", "yaml"] }
futures = "0.3.32"
futures-util = "0.3.32"
headers = "0.4.1"
hostname = "0.4.2"
http = "1.4.0"
httpdate = "1.0.3"
ip_network = { version = "0.4.1", features = ["serde"] }
json = "0.12.4"
jsonpath-rust = "1.0.4"
jsonschema = "0.33.0"
jwt-simple = { version = "0.12.14", default-features = false, features = ["pure-rust"] }
p256 = { version = "0.13.2", features = ["pem", "pkcs8"] }
percent-encoding = "2.3.2"
platform-dirs = "0.3.0"
prometheus-client = "0.24.0"
pwhash = "1.0.0"
rand = "0.9.2"
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "trust-dns"] }
ring = "0.17.14"
schema = "0.1.0"
sec1 = { version = "0.7.3", features = ["pem", "pkcs8"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_regex = "1.1.0"
strum = "0.27.2"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs", "rt-multi-thread", "signal"] }
tokio-retry2 = { version = "0.6.2", features = ["jitter"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "request-id"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v4"] }
x509-parser = "0.18.1"

[dev-dependencies]
tempfile = "3.26.0"
once_cell = "1.21.3"
test-log = { version = "0.2.19", features = ["trace"] }
http-body-util = "0.1.3"
serde_json = "1.0.149"
assert-json-diff = "2.0.2"
figment = { version = "0.10.19", features = ["env", "test", "yaml"] }
wiremock = "0.6.5"
tokio = { version = "1.49.0", features = ["test-util"] }
rcgen = { version = "0.14.7", default-features = false, features = ["aws_lc_rs", "crypto", "pem"] }
serde_yaml = "0.9.34"
indoc = "2.0.7"
